--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -2,21 +2,71 @@
   width: 15%;
   height: 100vh;
   position: sticky;
-
   &-list {
+    list-style: none;
+    &_title {
+      font-size: 1.8rem;
+      color: rgb(163, 164, 168);
+      //   font-weight: 500;
+      letter-spacing: 0.1rem;
+      padding: 3rem 3rem 2rem;
+    }
+
+    &_item {
+      color: black;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      font-size: 1.4rem;
+      text-transform: capitalize;
+      margin-bottom: 1rem;
+      padding: 1rem 3rem;
+      transition: all 0.2s;
+      &--text {
+        margin-left: 1rem;
+        font-weight: 500;
+      }
+
+      &--active {
+        background-color: rgba(rgb(243, 45, 88), 0.2);
+        color: rgb(243, 45, 88);
+        border-left: 0.3rem solid rgb(243, 45, 88);
+        border-top-left-radius: 0.1rem;
+        border-bottom-left-radius: 0.1rem;
+        transition: all 0.2s;
+      }
+    }
   }
 }
 
 .logo {
+  font-size: 2.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 7rem;
   border-bottom: 0.1rem solid #f2f2f2;
   border-right: 0.1rem solid #f2f2f2;
+  font-weight: 500;
 }
 
+//---------nav bar----------
 .navbar {
+  display: flex;
   height: 7rem;
-  padding: 2rem;
+  padding: 0rem 3rem;
+  &-search {
+    display: flex;
+    align-items: center;
+
+    &--input {
+      font-size: 1.7rem;
+      color: rgb(163, 164, 168);
+      margin-left: 1.5rem;
+    }
+
+    &--icon {
+      color: rgb(163, 164, 168);
+    }
+  }
 }
