--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
 @import 'bar';
-
+@import 'movies';
 
 *,
 *::after,
@@ -8,6 +8,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    min-height: 0;
+    min-width: 0;
 }
 
 html{
