--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -54,7 +54,10 @@
 .navbar {
   display: flex;
   height: 7rem;
-  padding: 0rem 3rem;
+  padding: 0rem 9rem;
+  background-color: transparent;
+  position: absolute;
+  z-index: 1;
   &-search {
     display: flex;
     align-items: center;
