--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -5,11 +5,12 @@
     //   height: 7rem;
     &--movie {
       position: relative;
-    //   height: 70rem;
+        // height: 65rem;
       &-info {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
+        align-items: flex-start;
         position: absolute;
         bottom: -1rem;
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
@@ -23,15 +24,25 @@
         }
 
         &__overview {
-            margin-top: 1rem;
-            width: 50%;
-          color: rgb(163, 164, 168);
+          margin-top: 1rem;
+          width: 50%;
+          color: rgb(163, 168, 164);
           font-size: 1.7rem;
+          margin-bottom: 2rem;
+        }
+
+        &__rating {
+            display: flex;
+          & span {
+            margin-right: 2rem;
+          }
+          margin-top: 0.3rem;
+          width: 50%;
+          color: #f32d58;
+          font-size: 1.7rem;
+          font-weight: 500;
         }
       }
     }
   }
-}
-.overlay {
-  background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
 }
