--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -2,6 +2,10 @@
   width: 15%;
   height: 100vh;
   position: sticky;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+
   &-list {
     list-style: none;
     &_title {
@@ -52,9 +56,10 @@
 
 //---------nav bar----------
 .navbar {
+  
   display: flex;
   height: 7rem;
-  padding: 0rem 9rem;
+  padding: 0rem 7rem;
   background-color: transparent;
   position: absolute;
   z-index: 1;
