--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -1,12 +1,14 @@
 .movies-content {
   display: flex;
+  flex-direction: column;
 
   &_nowPlaying {
-    //   height: 7rem;
     &--movie {
       position: relative;
-        // height: 65rem;
+      // height: 65rem;
+
       &-info {
+        padding: 7rem;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -16,7 +18,11 @@
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
         width: 100%;
         height: 100%;
-        padding: 10rem;
+        &__section {
+          color: rgb(163, 168, 164);
+          font-size: 1.8rem;
+          text-transform: capitalize;
+        }
         &__title {
           color: white;
           font-size: 5rem;
@@ -26,13 +32,13 @@
         &__overview {
           margin-top: 1rem;
           width: 50%;
-          color: rgb(163, 168, 164);
+          color: rgb(109, 109, 109);
           font-size: 1.7rem;
           margin-bottom: 2rem;
         }
 
         &__rating {
-            display: flex;
+          display: flex;
           & span {
             margin-right: 2rem;
           }
@@ -42,6 +48,47 @@
           font-size: 1.7rem;
           font-weight: 500;
         }
+      }
+    }
+  }
+
+  &_SecondarySection {
+    padding: 0 5rem;
+    width: 100%;
+    // height: 100rem;
+    margin-bottom: 10rem;
+    &-header {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      padding: 4rem 1rem 0;
+      &--name {
+        color: white;
+        font-size: 2.6rem;
+        // letter-spacing: 0.1rem;
+        font-weight: 500;
+      }
+    }
+
+    &-movie {
+      padding: 2rem 1.2rem ;
+      height: 33.7rem;
+      transition: all .2s;
+      &--img {
+        border-radius: 0.3rem;
+        width: 100%;
+        height: 100%;
+      }
+
+      &--title {
+        font-size: 1.5rem;
+        text-align: center;
+        color: rgb(163, 168, 164);
+        margin-top: 1rem;
+      }
+
+      &:hover{
+        transform: scale(1.1);
       }
     }
   }
