--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -56,7 +56,7 @@
     padding: 0 5rem;
     width: 100%;
     // height: 100rem;
-    margin-bottom: 10rem;
+    margin-bottom: 1rem;
     &-header {
       display: flex;
       align-items: flex-end;
@@ -67,13 +67,14 @@
         font-size: 2.6rem;
         // letter-spacing: 0.1rem;
         font-weight: 500;
+        text-transform: capitalize;
       }
     }
 
     &-movie {
-      padding: 2rem 1.2rem ;
+      padding: 2rem 1.2rem;
       height: 33.7rem;
-      transition: all .2s;
+      transition: all 0.2s;
       &--img {
         border-radius: 0.3rem;
         width: 100%;
@@ -87,7 +88,7 @@
         margin-top: 1rem;
       }
 
-      &:hover{
+      &:hover {
         transform: scale(1.1);
       }
     }
