--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -1,7 +1,7 @@
 .movies-content {
   display: flex;
   flex-direction: column;
-
+  padding-bottom: 7rem;
   &_nowPlaying {
     &--movie {
       position: relative;
@@ -32,7 +32,7 @@
         &__overview {
           margin-top: 1rem;
           width: 50%;
-          color: rgb(109, 109, 109);
+          color: rgb(143, 143, 143);
           font-size: 1.7rem;
           margin-bottom: 2rem;
         }
@@ -72,20 +72,28 @@
     }
 
     &-movie {
-      padding: 2rem 1.2rem;
-      height: 33.7rem;
+      padding: 2rem 0.3rem;
+      height: 36.3rem;
       transition: all 0.2s;
       &--img {
-        border-radius: 0.3rem;
+        // box-shadow: 0rem 0rem .2rem rgba(0,0,0,1);
+        transition: all .2s;
+        border-radius: 0.1rem;
+        // object-fit: cover;
         width: 100%;
         height: 100%;
+
+        &:hover {
+          box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.5);
+        }
       }
 
       &--title {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         text-align: center;
-        color: rgb(163, 168, 164);
-        margin-top: 1rem;
+        color: rgb(255, 255, 255);
+        // margin-top: 1rem;
+        // padding: 1rem 3rem;
       }
 
       &:hover {
