--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -5,8 +5,6 @@
   &_nowPlaying {
     &--movie {
       position: relative;
-      // height: 65rem;
-
       &-info {
         padding: 7rem;
         display: flex;
@@ -51,11 +49,9 @@
       }
     }
   }
-
   &_SecondarySection {
     padding: 0 5rem;
     width: 100%;
-    // height: 100rem;
     margin-bottom: 1rem;
     &-header {
       display: flex;
@@ -65,7 +61,6 @@
       &--name {
         color: white;
         font-size: 2.6rem;
-        // letter-spacing: 0.1rem;
         font-weight: 500;
         text-transform: capitalize;
       }
@@ -73,13 +68,10 @@
 
     &-movie {
       padding: 2rem 0.3rem;
-      height: 36.3rem;
       transition: all 0.2s;
       &--img {
-        // box-shadow: 0rem 0rem .2rem rgba(0,0,0,1);
-        transition: all .2s;
-        border-radius: 0.1rem;
-        // object-fit: cover;
+        transition: all 0.2s;
+        border-radius: 0.05rem;
         width: 100%;
         height: 100%;
 
@@ -88,16 +80,81 @@
         }
       }
 
-      &--title {
-        font-size: 1.3rem;
-        text-align: center;
-        color: rgb(255, 255, 255);
-        // margin-top: 1rem;
-        // padding: 1rem 3rem;
+      // &--title {
+      //   font-size: 1.3rem;
+      //   text-align: center;
+      //   color: rgb(255, 255, 255);
+      // }
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &_genreSection {
+    padding: 0 5rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    &-header {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      padding: 4rem 1rem 1rem;
+      &--name {
+        color: white;
+        font-size: 2.6rem;
+        font-weight: 500;
+        text-transform: capitalize;
+      }
+    }
+
+    &-genre {
+      padding: 0.5rem 0.5rem;
+      width: 100%;
+      transition: all 0.2s;
+      &--text {
+        display: flex;
+        justify-content: center;
+        background-color: rgba(27, 27, 27, 0.404);
+        border-radius: 0.2rem;
+        padding: 4rem 0rem;
+        font-size: 2rem;
+        color: rgb(161, 161, 161);
       }
 
       &:hover {
         transform: scale(1.1);
+      }
+    }
+  }
+
+  &_trailerSection {
+    padding: 0 5rem;
+    width: 100%;
+    margin-bottom: 1rem;
+
+    &-header {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      padding: 4rem 1rem 1rem;
+      &--name {
+        color: white;
+        font-size: 2.6rem;
+        font-weight: 500;
+        text-transform: capitalize;
+      }
+    }
+    &-trailer {
+      padding: 0.5rem 0.5rem;
+
+      // position: relative;
+      // padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+      &--player {
+        // position: absolute;
+        // top: 0;
+        // left: 0;
       }
     }
   }
