--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -113,14 +113,35 @@
       padding: 0.5rem 0.5rem;
       width: 100%;
       transition: all 0.2s;
-      &--text {
+      &-box {
+        // width: 15rem;
+        // height: 16rem;
+        padding: 2rem 1rem;
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         background-color: rgba(27, 27, 27, 0.404);
         border-radius: 0.2rem;
-        padding: 4rem 0rem;
-        font-size: 2rem;
+        font-size: 1.7rem;
         color: rgb(161, 161, 161);
+        &--img{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 7rem;
+          height: 10rem;
+          padding-bottom: 1rem;
+          // margin-bottom: 1rem;
+          // background-color: red;
+          // width: 6rem;
+          // flex: 1;
+        }
+        &--text{
+          // flex: 1;
+          // width: 100%;
+          // background-color: blue;
+        }
       }
 
       &:hover {
