--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -13,7 +13,7 @@
         align-items: flex-start;
         position: absolute;
         bottom: -1rem;
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, 1));
         width: 100%;
         height: 100%;
         &__section {
