--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -24,6 +24,7 @@ body {
 }
 
 .container {
+  width: 100%;
   display: flex;
 }
 
@@ -31,6 +32,8 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  position: relative;
 }
 
 .btn {
