--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -5,14 +5,14 @@
   display: flex;
   flex-direction: column;
   top: 0;
-  background-color:  rgb(12, 11, 11);
+  background-color: rgb(12, 11, 11);
   // box-shadow: 0rem 0 6rem black;
   z-index: 1;
   &-list {
     list-style: none;
     &_title {
       font-size: 1.8rem;
-      color: #82827C;
+      color: #82827c;
       //   font-weight: 500;
       letter-spacing: 0.1rem;
       padding: 3rem 3rem 2rem;
@@ -59,23 +59,66 @@
 //---------nav bar----------
 .navbar {
   display: flex;
-  height: 7rem;
-  padding: 0rem 7rem;
+  justify-content: space-between;
+  width: 100%;
+  // height: 7rem;
+  // padding: 0rem 7rem;
+  padding: 2rem 6rem;
   background-color: transparent;
   position: absolute;
+  top: 0;
   z-index: 1;
+  transition: all 0.4s;
+  // font-size: 2rem;
+  overflow: hidden;
+
   &-search {
     display: flex;
     align-items: center;
-
+    width: 35rem;
+    background-color: #ffffff10;
+    padding: 1.1rem 2rem;
+    border-radius: 0.3rem;
+    &--active {
+      background-color: transparent;
+    }
     &--input {
       font-size: 1.7rem;
-      color: rgb(163, 164, 168);
+      color: rgb(196, 196, 196);
       margin-left: 1.5rem;
     }
 
     &--icon {
       color: rgb(163, 164, 168);
+    }
+  }
+  &-scroll {
+    background-color: rgb(12, 11, 11);
+    position: fixed;
+    padding: 1rem 4rem;
+  }
+
+  &-account {
+    // z-index: 100;
+    // flex: 1;
+    display: flex;
+    align-items: center;
+    // justify-content: flex-end;
+
+    &--notification {
+      color: rgb(163, 164, 168);
+      margin-right: 2.4rem;
+    }
+    &--person{
+      width: 5rem;
+      height: 5rem;
+      border-radius: 50%;
+      background-color: rgb(243, 45, 88);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2.5rem;
     }
   }
 }
