--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -77,7 +77,7 @@
     align-items: center;
     width: 35rem;
     background-color: #ffffff10;
-    padding: 1.1rem 2rem;
+    padding: 0 0rem 0 2rem;
     border-radius: 0.3rem;
     &--active {
       background-color: transparent;
@@ -86,10 +86,21 @@
       font-size: 1.7rem;
       color: rgb(196, 196, 196);
       margin-left: 1.5rem;
+      width: 100%;
+      height: 100%;
+      background-color: transparent;
+      border: none;
+      &::placeholder{
+        color: rgb(141, 141, 141);
+      }
+      &:focus{
+        outline: none;
+      }
     }
 
     &--icon {
       color: rgb(163, 164, 168);
+
     }
   }
   &-scroll {
@@ -106,7 +117,7 @@
     // justify-content: flex-end;
 
     &--notification {
-      color: rgb(163, 164, 168);
+      color: rgb(209, 209, 209);
       margin-right: 2.4rem;
     }
     &--person{
