fix router navlink active mode

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -64,6 +64,7 @@ body {
     background-color: transparent;
     border: none;
     color: #f32d58;
+    text-decoration: none;
 
     &:hover {
       transform: scale(1.1);
