--- a/client/src/styles/SectionPage.scss
+++ b/client/src/styles/SectionPage.scss
@@ -1,9 +1,7 @@
 .section-page {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  height: 100%;
-  margin: 12rem 6rem;
+  margin: 12rem 6rem 4rem;
 
   &_info {
     color: white;
