--- a/client/src/styles/SectionPage.scss
+++ b/client/src/styles/SectionPage.scss
@@ -1,18 +1,20 @@
 .section-page {
   display: flex;
   flex-direction: column;
-  margin: 12rem 6rem 4rem;
 
-  &_info {
-    color: white;
-    text-transform: capitalize;
-    font-size: 2.6rem;
-    font-weight: 500;
-  }
-  &_movies {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-column-gap: 1rem;
+  &-content {
+    margin: 12rem 6rem 4rem;
+    &_info {
+      color: white;
+      text-transform: capitalize;
+      font-size: 2.6rem;
+      font-weight: 500;
+    }
+    &_movies {
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-column-gap: 1rem;
+    }
   }
 }
