--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -111,6 +111,11 @@
       padding: 0.5rem 0.5rem;
       width: 100%;
       transition: all 0.2s;
+      text-decoration: none;
+
+      &:focus {
+        outline: none;
+      }
       &-box {
         // width: 15rem;
         // height: 16rem;
@@ -123,7 +128,7 @@
         border-radius: 0.2rem;
         font-size: 1.7rem;
         color: rgb(161, 161, 161);
-        &--img{
+        &--img {
           display: flex;
           justify-content: center;
           align-items: center;
@@ -135,12 +140,12 @@
           // width: 6rem;
           // flex: 1;
         }
-        &--text{
+        &--text {
           // flex: 1;
           // width: 100%;
           // background-color: blue;
         }
-        &:hover{
+        &:hover {
           // border: .5rem solid #f32d58;
           background-color: #f32d583a;
         }
