--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -1,9 +1,14 @@
 .movies-content {
   padding-bottom: 7rem;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
   &_nowPlaying {
+    margin-bottom: 1rem;
     &--movie {
       position: relative;
+      &-img{
+        width: 100%;
+      }
       &-info {
         padding: 7rem;
         display: flex;
@@ -12,11 +17,11 @@
         align-items: flex-start;
         position: absolute;
         bottom: -1rem;
-        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, 1));
+        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, .8));
         width: 100%;
         height: 100%;
         &__section {
-          color: rgb(163, 168, 164);
+          color: rgb(168, 168, 168);
           font-size: 1.8rem;
           text-transform: capitalize;
         }
@@ -29,7 +34,7 @@
         &__overview {
           margin-top: 1rem;
           width: 50%;
-          color: rgb(143, 143, 143);
+          color: rgb(177, 177, 177);
           font-size: 1.7rem;
           margin-bottom: 2rem;
         }
