--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -46,6 +46,7 @@ body {
   cursor: pointer;
   transition: all 0.2s;
   &-primary {
+    width: 24rem;
     text-transform: capitalize;
     padding: 1.5rem 4rem;
     background-color: #f32d58;
