--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -6,7 +6,8 @@
     margin-bottom: 1rem;
     &--movie {
       position: relative;
-      &-img{
+      height: 70vh;
+      &-img {
         width: 100%;
       }
       &-info {
@@ -17,7 +18,7 @@
         align-items: flex-start;
         position: absolute;
         bottom: -1rem;
-        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, .8));
+        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, 0.8));
         width: 100%;
         height: 100%;
         &__section {
@@ -37,6 +38,7 @@
           color: rgb(177, 177, 177);
           font-size: 1.7rem;
           margin-bottom: 2rem;
+          display: none;
         }
 
         &__rating {
@@ -49,6 +51,7 @@
           color: #f32d58;
           font-size: 1.7rem;
           font-weight: 500;
+          margin-bottom: 1rem;
         }
       }
     }
@@ -73,6 +76,7 @@
     &-movie {
       padding: 2rem 0.3rem;
       transition: all 0.2s;
+      // height: 36.5%;
       &--img {
         transition: all 0.2s;
         border-radius: 0.05rem;
@@ -83,10 +87,11 @@
           box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.5);
         }
       }
-
       // &--title {
+      //   margin-top: 1rem;
       //   font-size: 1.3rem;
       //   text-align: center;
+      //   font-weight: 700;
       //   color: rgb(255, 255, 255);
       // }
 
@@ -186,6 +191,68 @@
       //   // top: 0;
       //   // left: 0;
       // }
+    }
+  }
+
+  &_networkSection {
+    padding: 0 5rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    &-header {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      padding: 4rem 1rem 1rem;
+      &--name {
+        color: white;
+        font-size: 2.6rem;
+        font-weight: 500;
+        text-transform: capitalize;
+      }
+    }
+
+    &-network {
+      padding: 0.5rem 0.5rem;
+      width: 100%;
+      transition: all 0.2s;
+      text-decoration: none;
+
+      &:focus {
+        outline: none;
+      }
+      &-box {
+        // width: 15rem;
+        height: 16rem;
+        padding: 2rem 9rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #f32d583a;
+        border-radius: 0.2rem;
+        font-size: 1.7rem;
+        color: rgb(161, 161, 161);
+        &--img {
+          display: flex;
+          filter: invert(0) sepia(0) saturate(1) hue-rotate(0deg) brightness(1);
+          justify-content: center;
+          align-items: center;
+          
+          // padding-bottom: 1rem;
+          // margin-bottom: 1rem;
+          // background-color: red;
+          // width: 6rem;
+          // flex: 1;
+        }
+        &:hover {
+          // border: .5rem solid #f32d58;
+          background-color: #5545498e;
+        }
+      }
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
   }
 }
