--- a/client/src/styles/SectionPage.scss
+++ b/client/src/styles/SectionPage.scss
@@ -14,6 +14,7 @@
       width: 100%;
       display: grid;
       grid-template-columns: repeat(6, 1fr);
+      // grid-auto-rows: 33rem;
       grid-column-gap: 1rem;
     }
   }
