--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -76,7 +76,9 @@
     &-movie {
       padding: 2rem 0.3rem;
       transition: all 0.2s;
-      // height: 36.5%;
+      height: 36.5rem;
+      object-fit: cover;
+
       &--img {
         transition: all 0.2s;
         border-radius: 0.05rem;
@@ -237,7 +239,7 @@
           filter: invert(0) sepia(0) saturate(1) hue-rotate(0deg) brightness(1);
           justify-content: center;
           align-items: center;
-          
+
           // padding-bottom: 1rem;
           // margin-bottom: 1rem;
           // background-color: red;
@@ -255,4 +257,9 @@
       }
     }
   }
+}
+
+.section {
+  height: 35rem;
+  // height: 30rem;
 }
