--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -59,7 +59,8 @@
   &_SecondarySection {
     padding: 0 5rem;
     width: 100%;
-    margin-bottom: 1rem;
+
+    // margin-bottom: 1rem;
     &-header {
       display: flex;
       align-items: flex-end;
@@ -74,21 +75,70 @@
     }
 
     &-movie {
-      padding: 2rem 0.3rem;
-      transition: all 0.2s;
-      height: 36.5rem;
-      object-fit: cover;
+      text-decoration: none;
+      width: 100%;
+      // object-fit: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-      &--img {
+      padding: 2rem 0.5rem;
+      &--box {
         transition: all 0.2s;
-        border-radius: 0.05rem;
-        width: 100%;
-        height: 100%;
+        height: 32rem;
+
+        // z-index: 1;
+        position: relative;
+        &-img {
+          transition: all 0.2s;
+          border-radius: 0.05rem;
+          width: 100%;
+          height: 100%;
+          display: block;
+
+          &:hover {
+            box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.5);
+          }
+        }
 
         &:hover {
-          box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.5);
+          transform: scale(1.03);
+        }
+
+        &-info {
+          opacity: 0;
+          position: absolute;
+          margin: 0rem 0rem;
+          bottom: 0rem;
+          // right: 1/rem;
+          width: 100%;
+          // /
+          // z-index: 1;
+          top: 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          // height: 100%;
+          flex-direction: column;
+          &-title {
+            // width: 100%;
+            font-size: 2rem;
+            color: white;
+          }
         }
       }
+
+      &:hover &--box-info {
+        opacity: 1;
+        background-color: #25252571;
+      }
+
+      &:hover &--box-img {
+        opacity: 0.3;
+
+        // display: none;
+      }
+
       // &--title {
       //   margin-top: 1rem;
       //   font-size: 1.3rem;
@@ -96,10 +146,6 @@
       //   font-weight: 700;
       //   color: rgb(255, 255, 255);
       // }
-
-      &:hover {
-        transform: scale(1.1);
-      }
     }
   }
   &_genreSection {
