--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -60,7 +60,6 @@
     padding: 0 5rem;
     width: 100%;
 
-    // margin-bottom: 1rem;
     &-header {
       display: flex;
       align-items: flex-end;
@@ -77,7 +76,6 @@
     &-movie {
       text-decoration: none;
       width: 100%;
-      // object-fit: cover;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -85,9 +83,6 @@
       padding: 2rem 0.5rem;
       &--box {
         transition: all 0.2s;
-        height: 32rem;
-
-        // z-index: 1;
         position: relative;
         &-img {
           transition: all 0.2s;
@@ -97,46 +92,65 @@
           display: block;
 
           &:hover {
-            box-shadow: 0rem 0rem 5rem rgba(0, 0, 0, 0.5);
+            box-shadow: 0rem 0rem 3rem rgba(0, 0, 0, 0.5);
           }
         }
 
         &:hover {
-          transform: scale(1.03);
+          transform: scale(1.05);
         }
 
         &-info {
+          transition: all 0.3s;
           opacity: 0;
           position: absolute;
           margin: 0rem 0rem;
           bottom: 0rem;
-          // right: 1/rem;
           width: 100%;
-          // /
-          // z-index: 1;
-          top: 0;
+          height: 100%;
           display: flex;
-          align-items: center;
-          justify-content: center;
-          // height: 100%;
           flex-direction: column;
-          &-title {
-            // width: 100%;
-            font-size: 2rem;
-            color: white;
+          justify-content: space-between;
+          align-items: flex-start;
+          &--text {
+            width: 100%;
+            padding: 1rem 1rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            &-title {
+              font-size: 1.7rem;
+              color: white;
+              width: 70%;
+              display: flex;
+              justify-content: center;
+              flex-direction: column;
+              & span {
+                padding-top: 0.2rem;
+                font-size: 1.3rem;
+                color: #f32d58;
+              }
+            }
+            &-rating {
+              color: #f32d58;
+              font-size: 1.5rem;
+            }
+          }
+          &-action {
+            padding: 1rem 0.5rem;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
           }
         }
       }
 
       &:hover &--box-info {
         opacity: 1;
-        background-color: #1d1d1d71;
-      }
-
-      &:hover &--box-img {
-        opacity: 0.3;
-
-        // display: none;
+        background-image: linear-gradient(
+          rgba(#000000, 0.9),
+          rgba(#000000, 0.3),
+          rgba(#000000, 0.9)
+        );
       }
 
       // &--title {
@@ -306,6 +320,6 @@
 }
 
 .section {
-  height: 35rem;
+  height: 33rem;
   // height: 30rem;
 }
