--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   &_nowPlaying {
-    margin-bottom: 1rem;
+    margin-bottom: -1rem;
     &--movie {
       position: relative;
       height: 70vh;
@@ -17,18 +17,22 @@
         justify-content: flex-end;
         align-items: flex-start;
         position: absolute;
-        bottom: -1rem;
-        background-image: linear-gradient(rgba(#030303, 0), rgba(#030303, 0.8));
+        bottom: 0rem;
+        background-image: linear-gradient(
+          to top ,
+          rgba(rgb(0, 0, 0), .6)10%,
+          rgba(rgb(0, 0, 0), 0)
+        );
         width: 100%;
         height: 100%;
         &__section {
           color: rgb(168, 168, 168);
-          font-size: 1.8rem;
+          font-size: 2rem;
           text-transform: capitalize;
         }
         &__title {
           color: white;
-          font-size: 5rem;
+          font-size: 5.5rem;
           font-weight: 500;
         }
 
@@ -36,7 +40,7 @@
           margin-top: 1rem;
           width: 50%;
           color: rgb(177, 177, 177);
-          font-size: 1.7rem;
+          font-size: 1.8rem;
           margin-bottom: 2rem;
           display: none;
         }
@@ -84,6 +88,7 @@
 
       padding: 2rem 0.5rem;
       &--box {
+        height: 32rem;
         &-img {
           border-radius: 0.05rem;
           width: 100%;
@@ -130,7 +135,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        padding: 2.7rem .8rem;
+        padding: 2.7rem 0.8rem;
         opacity: 0;
         transform: all 0.2s;
         // width: 100%;
@@ -139,9 +144,9 @@
       &:hover &--box-info {
         opacity: 1;
         background-image: linear-gradient(
-          rgba(#000000, 0.9),
-          rgba(#000000, 0.3),
-          rgba(#000000, 0.9)
+          rgba(#000000, 0.7),
+          rgba(#000000, 0),
+          rgba(#000000, 0.7)
         );
       }
 
@@ -263,7 +268,7 @@
       display: flex;
       align-items: flex-end;
       justify-content: space-between;
-      padding: 4rem 1rem 1rem;
+      padding: 4rem 1rem 0rem;
       &--name {
         color: white;
         font-size: 2.6rem;
@@ -277,6 +282,7 @@
       width: 100%;
       transition: all 0.2s;
       text-decoration: none;
+      padding: 2rem 0.5rem;
 
       &:focus {
         outline: none;
@@ -295,7 +301,6 @@
         color: rgb(161, 161, 161);
         &--img {
           display: flex;
-          filter: invert(0) sepia(0) saturate(1) hue-rotate(0deg) brightness(1);
           justify-content: center;
           align-items: center;
 
