--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500,600&display=swap");
 @import "~slick-carousel/slick/slick-theme.css";
 @import "~slick-carousel/slick/slick.css";
 @import "bar";
@@ -22,7 +22,7 @@ html {
 
 body {
   font-size: inherit;
-  font-family: "Roboto", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
   height: 100vh;
 }
 
@@ -40,7 +40,7 @@ body {
 }
 
 .btn {
-  margin-right: 0.4rem;
+  // margin-right: 0.4rem;
   border-radius: 0.2rem;
   font-size: 2rem;
   border: 0.1rem solid #f32d58;
@@ -79,6 +79,19 @@ body {
     }
   }
 
+  &-movie {
+    // width: 24rem;
+    text-transform: capitalize;
+    padding: 1.5rem 4rem;
+    background-color: #f32d58;
+    color: white;
+
+    &:hover {
+      background-color: #c41f43;
+      color: white;
+    }
+  }
+
   &:focus {
     outline: none;
   }
@@ -105,4 +118,9 @@ body {
 
 .pad-small {
   padding: 0.5rem 0rem;
+}
+
+.routes {
+  width: 100%;
+  height: 100%;
 }
