--- a/client/src/styles/movie.scss
+++ b/client/src/styles/movie.scss
@@ -1,10 +1,118 @@
 .movie {
-  height: 100%;
-  width: 100%;
-  &-bg {
-    height: 100vh;
-    &--img {
-      width: 100%;
+  // &-bg {
+  // //   height: 70vh;
+  //   position: relative;
+  //   height: 50rem;
+  //   &--img {
+  //     width: 100%;
+  //   }
+
+  //   &--overlay {
+  //     position: absolute;
+  //     font-size: 3rem;
+  //     //   transform: translate(0,-50%);
+  //     bottom: 0;
+  //     height: 100%;
+  //     width: 100%;
+  //     background-image: linear-gradient(
+  //       rgba(3, 3, 3, 0.2),
+  //       rgba(3, 3, 3, 1) 100%
+  //     );
+  //   }
+  // }
+
+  //   z-index: 10;
+  padding: 10rem 20rem;
+
+  &-header {
+    padding: 0rem 0 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    &--text {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-self: center;
+      &-title {
+        font-weight: 500;
+        font-size: 4.5rem;
+        color: white;
+      }
+      &-details {
+        flex: 1;
+        display: flex;
+        font-size: 1.6rem;
+        color: #f32d58;
+
+        &--genres {
+          display: flex;
+          align-items: center;
+          margin-right: 2rem;
+
+          &-genre{
+              margin-right: .3rem;
+              margin-left: .3rem;
+          }
+        }
+        & p {
+          margin-right: 2rem;
+        }
+      }
     }
+    &--rating {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      &-number {
+        font-weight: 500;
+        font-size: 4rem;
+        color: #f32d58;
+      }
+      &-user {
+        font-size: 1.2rem;
+        color: #555555;
+      }
+    }
+  }
+  &-content {
+    display: flex;
+    // background-color: red;
+    &-left {
+      display: flex;
+      flex-direction: column;
+      // height: 60rem;
+      &--poster {
+        // flex: 1;
+        width: 35rem;
+        margin-bottom: 0.4rem;
+        &-img {
+          border-radius: 0.2rem;
+          width: 100%;
+        }
+      }
+    }
+
+    &--details {
+      flex: 1;
+      color: white;
+      padding: 0 5rem;
+
+      &-desc {
+        &-title {
+          // line-height: .6;
+          font-size: 3rem;
+          font-weight: 500;
+        }
+        &-overview {
+          margin-top: 1rem;
+          font-size: 1.7rem;
+          color: rgb(155, 155, 155);
+        }
+      }
+    }
+  }
+  &-bottem {
   }
 }
