--- a/client/src/styles/SectionPage.scss
+++ b/client/src/styles/SectionPage.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
 
   &-content {
-    margin: 12rem 6rem 4rem;
+    margin: 10rem 7rem 0rem;
     &_info {
       color: white;
       text-transform: capitalize;
@@ -15,7 +15,7 @@
       display: grid;
       grid-template-columns: repeat(6, 1fr);
       // grid-auto-rows: 33rem;
-      grid-column-gap: 1rem;
+      // grid-column-gap: .5rem;
     }
   }
 }
