--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -18,8 +18,8 @@
         position: absolute;
         bottom: 0rem;
         background-image: linear-gradient(
-          to top ,
-          rgba(rgb(0, 0, 0), .6),
+          to top,
+          rgba(rgb(0, 0, 0), 0.6),
           rgba(rgb(0, 0, 0), 0)
         );
         width: 100%;
@@ -86,6 +86,7 @@
       padding: 2rem 0.5rem;
       &--box {
         height: 30.6rem;
+        // width: 20.5rem;
         &-img {
           border-radius: 0.05rem;
           width: 100%;
@@ -98,6 +99,7 @@
         }
         position: relative;
 
+        background-color: rgba(27, 27, 27, 0.404);
         &-info {
           transition: all 0.3s;
           opacity: 0;
