--- a/client/src/styles/bar.scss
+++ b/client/src/styles/bar.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   top: 0;
-  background-color: rgb(12, 11, 11);
+  // background-color: rgb(12, 11, 11);
+  background-color: rgb(3, 3, 3);
   // box-shadow: 0rem 0 6rem black;
   z-index: 1;
   &-list {
