--- a/client/src/styles/movies.scss
+++ b/client/src/styles/movies.scss
@@ -61,7 +61,8 @@
   }
   &_SecondarySection {
     width: 100%;
-
+    // padding-bottom: 1rem;
+    height: 48rem;
     &-header {
       display: flex;
       align-items: center;
@@ -78,9 +79,9 @@
     &-movie {
       text-decoration: none;
       width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
       position: relative;
       transition: all 0.2s;
       padding: 2rem 0.5rem;
@@ -103,6 +104,7 @@
         &-info {
           transition: all 0.3s;
           opacity: 0;
+
           position: absolute;
           margin: 0rem 0rem;
           bottom: 0rem;
@@ -112,6 +114,7 @@
           flex-direction: column;
           justify-content: flex-end;
           align-items: flex-start;
+          // display: none;
           &--text {
             width: 100%;
             padding: 1rem 1rem 1.5rem;
@@ -143,9 +146,9 @@
       &:hover &--box-info {
         opacity: 1;
         background-image: linear-gradient(
-          rgba(#000000, 0.7),
+          rgba(#000000, 0.5),
           rgba(#000000, 0),
-          rgba(#000000, 0.7)
+         
         );
       }
 
@@ -156,24 +159,24 @@
       &:hover {
         transform: scale(1.05);
       }
-      // &--title {
-      //   margin-top: 1rem;
-      //   font-size: 1.3rem;
-      //   text-align: center;
-      //   font-weight: 700;
-      //   color: rgb(255, 255, 255);
-      // }
+
+      &--title {
+        margin-top: 1rem;
+        font-size: 1.6rem;
+        // font-weight: 700;
+        color: rgb(255, 255, 255);
+      }
     }
   }
   &_genreSection {
-    // padding: 0 5rem;
+    // padding: 2rem 0rem;
     width: 100%;
     margin-bottom: 1rem;
     &-header {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 4rem 1rem 0rem;
+      padding: 4rem 1rem 2rem;
       line-height: 1;
 
       &--name {
@@ -185,7 +188,7 @@
     }
 
     &-genre {
-      padding: 2rem 0.5rem;
+      padding: 0.5rem 0.5rem;
       width: 100%;
       transition: all 0.2s;
       text-decoration: none;
